<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/quiz"
    android:gravity="center"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView

        android:id="@+id/cardViewQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtViewSignIn"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTxtUserName"
                    android:textColor="?attr/actionModeSplitBackground"
                    android:textColorHint="?attr/colorButtonNormal"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInPasswrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwrdHint"
                    android:inputType="textPassword"
                    android:password="true"
                    android:textColor="@color/black"
                    android:textColorHint="?attr/colorButtonNormal"
                    android:textSize="14sp"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/SignInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/blue"
                android:text="@string/btnSignIn"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/blue" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>